Efecto scroll a los botones
Se le agrego un codigo jquery para hacer un efecto de scroll al dar
click en las diferentes opciones del menu.

--- a/index.html
+++ b/index.html
@@ -14,22 +14,22 @@
 	<header>
 		<nav>
 			<ul class="nav">
-				<li><a href='paginas/inicio.html' target="central">Inicio</a></li>
+				<li class="ir-abajo"><a href='paginas/inicio.html' target="central">Inicio</a></li>
 				<li><a>Lecturas</a>
                          
                          <ul>
-                           <li>	<a href="paginas/lectura1.html" target="central">Lectura 1</a> </li>
-                           <li>	<a href="paginas/lectura2.html" target="central">Lectura 2</a> </li>
-                           <li>	<a href="paginas/lectura3.html" target="central">Lectura 3</a> </li>
-                           <li>	<a href="paginas/lectura4.html" target="central">Lectura 4</a> </li>
-                           <li>	<a href="paginas/lectura5.html" target="central">Lectura 5</a> </li>
+                           <li class="ir-abajo">	<a href="paginas/lectura1.html" target="central">Lectura 1</a> </li>
+                           <li class="ir-abajo">	<a href="paginas/lectura2.html" target="central">Lectura 2</a> </li>
+                           <li class="ir-abajo">	<a href="paginas/lectura3.html" target="central">Lectura 3</a> </li>
+                           <li class="ir-abajo">	<a href="paginas/lectura4.html" target="central">Lectura 4</a> </li>
+                           <li class="ir-abajo">	<a href="paginas/lectura5.html" target="central">Lectura 5</a> </li>
                          </ul>
   
 				</li>
 				<li><a>Multimedia</a>
                           <ul>
-                            <li> <a href="paginas/multimedia1.html" target="central">Multimedia 1</a> </li>
-                            <li> <a href="paginas/multimedia2.html" target="central">Multimedia 2</a> </li>
+                            <li class="ir-abajo"> <a href="paginas/multimedia1.html" target="central">Multimedia 1</a> </li>
+                            <li class="ir-abajo"> <a href="paginas/multimedia2.html" target="central">Multimedia 2</a> </li>
                           </ul>
 				</li>
                            
@@ -40,12 +40,12 @@
 			<ul class="nav">
 				<li><a>Actividades</a>
                        <ul>
-                          <li> <a href="paginas/actividad1.html" target="central">Actividad 1</a> </li>
-                          <li> <a href="paginas/actividad2.html" target="central">Actividad 2</a> </li>
-                          <li> <a href="paginas/actividad3.html" target="central">Actividad 2</a> </li>
+                          <li class="ir-abajo"> <a href="paginas/actividad1.html" target="central">Actividad 1</a> </li>
+                          <li class="ir-abajo"> <a href="paginas/actividad2.html" target="central">Actividad 2</a> </li>
+                          <li class="ir-abajo"> <a href="paginas/actividad3.html" target="central">Actividad 2</a> </li>
                        </ul>
 				</li>
-				<li><a href='paginas/autores.html' target="central">Autores</a></li>
+				<li class="ir-abajo"><a href='paginas/autores.html' target="central">Autores</a></li>
 				<li><a href='https://twitter.com/UniversidadUNAD'>Twitter</a></li>
 			</ul>
 		</nav>
