Terminacion del sitio web
Se modifico el CSS3, asu vez las paginas en HTML5, se genero nuevo
codigo jquery y se agregaron detalles a la pagina.

--- a/index.html
+++ b/index.html
@@ -18,18 +18,18 @@
 				<li><a>Lecturas</a>
                          
                          <ul>
-                           <li class="ir-abajo">	<a href="paginas/lectura1.html" target="central">Lectura 1</a> </li>
-                           <li class="ir-abajo">	<a href="paginas/lectura2.html" target="central">Lectura 2</a> </li>
-                           <li class="ir-abajo">	<a href="paginas/lectura3.html" target="central">Lectura 3</a> </li>
-                           <li class="ir-abajo">	<a href="paginas/lectura4.html" target="central">Lectura 4</a> </li>
-                           <li class="ir-abajo">	<a href="paginas/lectura5.html" target="central">Lectura 5</a> </li>
+                           <li class="ir-abajo">	<a href="paginas/lectura1.html" target="central">Como Instalar Sublime Text</a> </li>
+                           <li class="ir-abajo">	<a href="paginas/lectura2.html" target="central">Como Instalar XAMPP</a> </li>
+                           <li class="ir-abajo">	<a href="paginas/lectura3.html" target="central">Conceptos básicos De Base de Datos</a> </li>
+                           <li class="ir-abajo">	<a href="paginas/lectura4.html" target="central">Conceptos básicos De PHP</a> </li>
+                           <li class="ir-abajo">	<a href="paginas/lectura5.html" target="central">Conexion de base de datos MSQL con PHP</a> </li>
                          </ul>
   
 				</li>
 				<li><a>Multimedia</a>
                           <ul>
-                            <li class="ir-abajo"> <a href="paginas/multimedia1.html" target="central">Multimedia 1</a> </li>
-                            <li class="ir-abajo"> <a href="paginas/multimedia2.html" target="central">Multimedia 2</a> </li>
+                            <li class="ir-abajo"> <a href="paginas/multimedia1.html" target="central">Tutorial como crear una base de datos</a> </li>
+                            <li class="ir-abajo"> <a href="paginas/multimedia2.html" target="central">Tutorial como hacer una conexion de base de datos</a> </li>
                           </ul>
 				</li>
                            
@@ -40,9 +40,9 @@
 			<ul class="nav">
 				<li><a>Actividades</a>
                        <ul>
-                          <li class="ir-abajo"> <a href="paginas/actividad1.html" target="central">Actividad 1</a> </li>
-                          <li class="ir-abajo"> <a href="paginas/actividad2.html" target="central">Actividad 2</a> </li>
-                          <li class="ir-abajo"> <a href="paginas/actividad3.html" target="central">Actividad 2</a> </li>
+                          <li class="ir-abajo"> <a href="paginas/actividad1.html" target="central">Actividad 1 Sopa de Letras</a> </li>
+                          <li class="ir-abajo"> <a href="paginas/actividad2.html" target="central">Actividad 2 </a> </li>
+                          <li class="ir-abajo"> <a href="paginas/actividad3.html" target="central">Actividad 3 </a> </li>
                        </ul>
 				</li>
 				<li class="ir-abajo"><a href='paginas/autores.html' target="central">Autores</a></li>
@@ -58,7 +58,7 @@
 
 <footer>
 	
-<img id='logos-unad' src='pictures/logos-unad.jpg'>
+<img id='logos-unad' src='pictures/logos calidad.png'>
 <h4 id="footer-letra">Universidad Nacional Abierta y a Distancia <br> Objeto Virtual De Informacion <br> 2017</h4>
 
 
